cluster/apps/taqueria-bonjour/backend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: taqueria-bonjour
  labels:
    app: taqueria-bonjour
    kubernetes.io/ingress.class: traefik
  annotations:
    hajimari.io/appName: "taqueria-bonjour-api"
    hajimari.io/enable: "false"
    hajimari.io/icon: "taco"
    traefik.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: bonjourinc.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http-backend
    - host: bonjour.bonjourinc.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http-backend
    - host: "bonjour.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http-backend
